# energydb-inspect

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  run.fish
.github/workflows/: publish.yml
assets/: WasmApp-C-2k-ttb.js  index-CsHiy1lO.js  index-Ds0Pt0Gd.css
docs/: HOSTING.md
energydb_inspect/: app.py  cli.py  db.py  demo_data.py  queries.py
energydb_inspect/notebooks/: demo.py
web/: deploy-gh-pages.sh  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  Dashboard.tsx  main.tsx  theme.css  vite-env.d.ts
web/src/api/: client.ts  types.ts
web/src/components/: EdgePanel.tsx  Header.tsx  Logo.tsx  MapPanel.tsx  NodePanel.tsx  SeriesPanel.tsx  Table.tsx  TreeView.tsx  UnderTheHood.tsx
web/src/hooks/: useECharts.ts  useInspector.ts  useTheme.ts
web/src/lib/: d3tree.ts  drag.ts  format.tsx  tree.ts
web/src/wasm/app/: WasmApp.tsx  useIsMobile.ts  usePlayground.ts  useWasmInspector.ts
web/src/wasm/demo/: demoData.ts  steps.ts
web/src/wasm/edb/: diff.ts  models.ts  units.ts  uuid7.ts
web/src/wasm/mock/: api.ts  client.ts  store.ts
web/src/wasm/playground/: CodeBlock.tsx  Playground.tsx  Result.tsx  RunBar.tsx
