[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energydb-inspect"
version = "0.8.0"
description = "Visual inspector for energydb: a read-only dashboard over your Postgres structure + ClickHouse values."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "energydb>=0.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "clickhouse-connect>=0.8",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "python-dotenv>=1.0",
]

# Extras only for running the example notebook (energydb_inspect/notebooks/demo.py);
# the dashboard itself needs none of these.
[project.optional-dependencies]
notebook = ["marimo>=0.9", "polars", "pandas>=2.2", "numpy", "shapely"]

[project.scripts]
energydb-inspect = "energydb_inspect.cli:main"

[dependency-groups]
dev = ["ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["energydb_inspect"]

# The built dashboard (energydb_inspect/_static, produced by `bun run build` at
# publish time) is gitignored, so force-include it in the wheel via `artifacts`.
[tool.hatch.build]
artifacts = ["energydb_inspect/_static/**"]

[tool.ruff]
# marimo notebooks intentionally use trailing expressions as cell outputs (B018)
# and place imports inside cells (I001); marimo manages them, so skip linting.
extend-exclude = ["energydb_inspect/notebooks"]

# Pin the example notebook to step-by-step execution. marimo merges this over the
# user's ~/.config/marimo, so it overrides a global auto_instantiate/autorun:
# opening the notebook runs nothing, and running a cell marks the ones below it
# stale instead of cascading, so you build the tree one cell at a time.
[tool.marimo.runtime]
auto_instantiate = false
on_cell_change = "lazy"
